# sehat

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  build.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
sehat/: __init__.py  __main__.py  config.py  default_config.json  models.py  repair_jsonl.py  settings_window.py  timer_engine.py  tray_app.py
sehat/exercises/: _index.json  chin_tucks.md  drink_water.md  eye_20_20_20.md  full_break_stretch.md  neck_side_stretch.md  neural_glide_c2c3.md  posture_check.md  shoulder_shrugs.md  stand_and_move.md  suboccipital_release.md  workout_bodyweight.md  workout_stretch_flow.md
tests/: test_config.py  test_models.py  test_repair_jsonl.py  test_settings.py  test_settings_window.py
